// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification Component should render notification component with status error 1`] = `
<div
  className=" elem-pt-SM elem-pr-LRG elem-pb-SM elem-pl-LRG elem-mb-LRG"
>
  <img
    alt="error icon"
    className="elem-mr-MED"
    src="/static/images/circle-error-fill.png"
  />
  <Styled(BodyCopy)
    className={null}
    color="text.primary"
    component="p"
    fontFamily="primary"
    fontSize="fs14"
    fontWeight="extrabold"
    letterSpacing="normal"
    lineHeight="normal"
    textAlign="left"
  />
</div>
`;

exports[`Notification Component should render notification component with status success 1`] = `
<div
  className=" elem-pt-SM elem-pr-LRG elem-pb-SM elem-pl-LRG elem-mb-LRG"
>
  <img
    alt="success icon"
    className="elem-mr-MED"
    src="/static/images/circle-check-fill.png"
  />
  <Styled(BodyCopy)
    className={null}
    color="text.primary"
    component="p"
    fontFamily="primary"
    fontSize="fs14"
    fontWeight="extrabold"
    letterSpacing="normal"
    lineHeight="normal"
    textAlign="left"
  />
</div>
`;
